--- a/Exploration/murder_swarm/resource/murder_testcity_ground.yaml
+++ b/Exploration/murder_swarm/resource/murder_testcity_ground.yaml
@@ -58,13 +58,14 @@ block_map/pro_hit_occ: 0.90
 block_map/pro_miss_free: 0.75
 block_map/statistic_v: true
 block_map/show_block: true
+block_map/vis_mode: true
 block_map/min_finish_t: 30.0
 
 Exp/show_swarm_traj: false
 EXP/finish_hold_duration: 15.0
-Exp/robot_sizeX: 0.5
-Exp/robot_sizeY: 0.5
-Exp/robot_sizeZ: 0.5
+Exp/robot_sizeX: 0.48
+Exp/robot_sizeY: 0.48
+Exp/robot_sizeZ: 0.3
 Exp/minX: -25.0
 Exp/minY: -25.0
 Exp/minZ: 0.0
@@ -85,7 +86,7 @@ Exp/takeoff_yaw: 0.0
 Exp/reach_out_t: 0.1
 Exp/AutoTakeoff: true
 Exp/statistic: true
-Exp/finish_thresh: 0.69
+Exp/finish_thresh: 0.5
 
 #swarm
 # Exp/UAV_id: 1
