--- a/Exploration/murder_swarm/resource/murder_maze3_ground.yaml
+++ b/Exploration/murder_swarm/resource/murder_maze3_ground.yaml
@@ -139,6 +139,7 @@ opt/SwarmAvoid: 0.9
 opt/WeiPos: 5000.0
 opt/WeiVel: 500.0
 opt/WeiAcc: 100.0
+opt/WeiJer: 50.0
 opt/WeiSwarm: 300.0
 opt/WeiminT: 10.0
 opt/WeiT: 200.0
