--- a/Exploration/murder_swarm/resource/murder_testcity.yaml
+++ b/Exploration/murder_swarm/resource/murder_testcity.yaml
@@ -138,10 +138,12 @@ opt/YawVel: 2.2
 opt/YawAcc: 2.2
 opt/MaxVel: 1.5
 opt/MaxAcc: 1.5
+opt/MaxJer: 25.0
 opt/SwarmAvoid: 1.2
 opt/WeiPos: 5000.0
 opt/WeiVel: 800.0
 opt/WeiAcc: 400.0
+opt/WeiJer: 50.0
 opt/WeiSwarm: 100.0
 opt/WeiminT: 10.0
 opt/WeiT: 200.0
